--- a/layout/category.ejs
+++ b/layout/category.ejs
@@ -26,7 +26,7 @@ how to add a category page:
 
     <div class="container">
         <div class="post-wrap categories">
-            <h2 class="post-title">-&nbsp;Categories&nbsp;-</h2>
+            <h2 class="post-title">-&nbsp;分类&nbsp;-</h2>
             <div class="categories-card">
                 <% site.categories.forEach(category_item=>{ %>
                     <%# console.log("hehe") %>
