--- a/source/css/_page/_post/post_content.styl
+++ b/source/css/_page/_post/post_content.styl
@@ -49,7 +49,7 @@
   code, pre
     padding 7px
     font-size 13px
-    font-family Consolas, Monaco, Menlo, Consolas, monospace
+    font-family JetBrains Mono, Consolas, Monaco, Menlo, Consolas, monospace
   code
     padding 3px 5px
     border-radius 4px
