--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -2,3 +2,30 @@
 // Custom style
 // ==============================
 //  Also You can override the variables in variable.styl to customize the style
+
+// waline评论样式
+.wl-comment {
+    max-width: 780px;
+    margin: auto;
+}
+.wl-meta-head {
+    max-width: 780px;
+    margin: auto;
+}
+.wl-empty {
+    max-width: 780px;
+    margin: auto;
+}
+.wl-cards .wl-item {
+    max-width: 780px;
+    margin: auto;
+} 
+.wl-power {
+    max-width: 780px;
+    margin: auto;
+}
+
+.footer {
+    height: 3rem; //行高
+    line-height: 1.5rem; //行间距
+}
