--- a/layout/_page/post.ejs
+++ b/layout/_page/post.ejs
@@ -11,20 +11,43 @@
             <% if(theme.post_meta_enable){ %>
                 <div class="post-meta">
                     <% if(theme.post_author_enable && config.author){ %>
-                        Author: <a itemprop="author" rel="author" href="/"><%- config.author %></a>
+                        作者: <a itemprop="author" rel="author" href="/"><%- config.author %></a>
                     <% } %>
 
                     <% if(page.date && theme.post_date_enable){ %>
                         <span class="post-time">
-                        Date: <a href="#"><%- date(page.date, theme.date_format)  %>&nbsp;&nbsp;<%- time(page.date, theme.time_format)%></a>
+                        发表于: <a href="#"><%- date(page.date, theme.date_format)  %></a>
+                        </span>
+                    <% } %>
+                    <% if(page.updated && theme.post_updated_enable){ %>
+                        <span class="post-updated">
+                        更新于: <a href="#"><%- date(page.updated, theme.date_format)  %></a>
                         </span>
                     <% } %>
                     <% if(page.categories.length!==0 && theme.post_category_enable){ %>
                         <span class="post-category">
-                    Category:
+                        分类于:
                             <% page.categories.forEach(item=>{ %>
                                 <a href="<%- url_for(item.path) %>"><%- item.name %></a>
                             <% }) %>
+                        </span>
+                    <% } %>
+                    <% if(config.symbols_count_time.symbols){ %>
+                        <span class="post-count">
+                        本文字数:
+                            <a href="#"><%= symbolsCount(post) %></a>
+                        </span>
+                    <% } %>
+                    <% if(config.symbols_count_time.time){ %>
+                        <span class="post-count">
+                        阅读时长:
+                            <a href="#"><%= symbolsTime(post) %></a>
+                        </span>
+                    <% } %>
+                    <% if(theme.post_view_counter_enable){ %>
+                        <span class="post-view">
+                        阅读量:
+                            <a class="busuanzi-value" id="busuanzi_value_page_pv"></a>
                         </span>
                     <% } %>
                 </div>
@@ -39,19 +62,19 @@
             <section class="post-copyright">
                 <% if(theme.post_copyright_author_enable){ %>
                     <p class="copyright-item">
-                        <span>Author:</span>
+                        <span>本文作者:</span>
                         <span><%- config.author %></span>
                     </p>
                 <% } %>
                 <% if(theme.post_copyright_permalink_enable){ %>
                     <p class="copyright-item">
-                        <span>Permalink:</span>
+                        <span>本文链接:</span>
                         <span><a href="<%- page.permalink %>"><%- page.permalink %></a></span>
                     </p>
                 <% } %>
                 <% if(theme.post_copyright_license_enable){ %>
                     <p class="copyright-item">
-                        <span>License:</span>
+                        <span>版权声明:</span>
                         <span><%- theme.post_copyright_license_text %></span>
                     </p>
                 <% } %>
@@ -66,19 +89,19 @@
         <% } %>
         <section class="post-tags">
             <div>
-                <span>Tag(s):</span>
+                <span>标签:</span>
                 <span class="tag">
                     <% if(page.tags.length!==0){%>
                     <% page.tags.forEach(item=>{ %>
-                        <a href="<%- url_for(item.path) %>"># <%- item.name %></a>
+                        <a href="<%- url_for(item.path) %>"><i class="iconfont icon-24gf-tags %>"></i> <%- item.name %></a>
                     <% }) %>
                         <% } %>
                 </span>
             </div>
             <div>
-                <a href="javascript:window.history.back();">back</a>
+                <a href="javascript:window.history.back();">返回</a>
                 <span>· </span>
-                <a href="<%- config.root %>">home</a>
+                <a href="<%- config.root %>">首页</a>
             </div>
         </section>
         <section class="post-nav">
