--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -63,3 +63,7 @@ if (is_archive()){
         <% } %>
     <% } %>
 <% } %>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=JetBrains+Mono:wght@400;700&family=Noto+Serif+SC:wght@400;500;700&display=swap" rel="stylesheet">
