--- a/source/css/_page/_post/post_code.styl
+++ b/source/css/_page/_post/post_code.styl
@@ -3,7 +3,7 @@
     line-height 1.7em
     padding 7px
     font-size 13px
-    font-family Consolas, Monaco, Menlo, Consolas, monospace
+    font-family JetBrains Mono, Consolas, Monaco, Menlo, Consolas, monospace
   code
     line-height 1.7em
     padding 3px 5px
