--- a/source/css/font.styl
+++ b/source/css/font.styl
@@ -8,4 +8,4 @@
   font-weight 300
   font-display swap
 
-$font-family = 'Microsoft Jhenghei',Lantinghei SC, 'lanting', PingFang SC, Seguo UI, Microsoft Yahei, Arial
+$font-family = 'EB Garamond', 'Noto Serif SC', 'Microsoft Jhenghei',Lantinghei SC, 'lanting', PingFang SC, Seguo UI, Microsoft Yahei, Arial
