add dark theme code style

--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -29,3 +29,17 @@
     height: 3rem; //行高
     line-height: 1.5rem; //行间距
 }
+
+//代码块深色
+// Dark mode for pre
+.dark-theme .post-content figure,
+.dark-theme .post-content figure.highlight .code pre {
+    background-color: #444;
+    color: #ccc;
+}
+
+// Dark mode for pre line number
+.dark-theme .post-content figure.highlight .gutter pre {
+    background-color: #444;
+    color: #ccc;
+}
