--- a/layout/_plugins/waline.ejs
+++ b/layout/_plugins/waline.ejs
@@ -13,7 +13,7 @@
       el: '#waline',
       serverURL: 'https://comments.wangzihang.site/',
       emoji: ['https://unpkg.com/@waline/emojis@1.1.0/weibo', 'https://unpkg.com/@waline/emojis@1.1.0/bilibili'],
-      dark: 'body.dark-theme'
+      dark: 'body.dark-theme',
     });
   </script>
 </body>
