--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,13 +7,13 @@
             <% } %>
             <% if(config.symbols_count_time.total_symbols){ %>
                 &nbsp;<span class="site-count">
-                 <i class="iconfont icon-tongji %>"></i>
+                 <i class="iconfont icon-file-word %>"></i>
                     <a href="#"><%= symbolsCountTotal(site) %></a>
                 </span>&nbsp;
             <% } %>
             <% if(config.symbols_count_time.total_time){ %>
                 <span class="site-count">
-                <i class="iconfont icon-shichang %>"></i>
+                <i class="iconfont icon-time %>"></i>
                     <a href="#"><%= symbolsTimeTotal(site) %></a>
                 </span>
             <% } %>
