--- a/layout/_page/post.ejs
+++ b/layout/_page/post.ejs
@@ -16,17 +16,17 @@
 
                     <% if(page.date && theme.post_date_enable){ %>
                         <span class="post-time">
-                        发表于: <a href="#"><%- date(page.date, theme.date_format)  %></a>
+                            <i class="iconfont icon-calendar %>"></i>&nbsp;<a href="#"><%- date(page.date, theme.date_format)  %></a>
                         </span>
                     <% } %>
                     <% if(page.updated && theme.post_updated_enable){ %>
                         <span class="post-updated">
-                        更新于: <a href="#"><%- date(page.updated, theme.date_format)  %></a>
+                            <i class="iconfont icon-calendar-check-fill %>"></i>&nbsp;<a href="#"><%- date(page.updated, theme.date_format)  %></a>
                         </span>
                     <% } %>
                     <% if(page.categories.length!==0 && theme.post_category_enable){ %>
                         <span class="post-category">
-                        分类于:
+                            <i class="iconfont icon-folder %>"></i>&nbsp;
                             <% page.categories.forEach(item=>{ %>
                                 <a href="<%- url_for(item.path) %>"><%- item.name %></a>
                             <% }) %>
@@ -34,19 +34,19 @@
                     <% } %>
                     <% if(config.symbols_count_time.symbols){ %>
                         <span class="post-count">
-                        本文字数:
+                            <i class="iconfont icon-file-word %>"></i>&nbsp;
                             <a href="#"><%= symbolsCount(post) %></a>
                         </span>
                     <% } %>
                     <% if(config.symbols_count_time.time){ %>
                         <span class="post-count">
-                        阅读时长:
+                            <i class="iconfont icon-time %>"></i>&nbsp;
                             <a href="#"><%= symbolsTime(post) %></a>
                         </span>
                     <% } %>
                     <% if(theme.post_view_counter_enable){ %>
                         <span class="post-view">
-                        阅读量:
+                            <i class="iconfont icon-icon- %>"></i>&nbsp;
                             <a class="busuanzi-value" id="busuanzi_value_page_pv"></a>
                         </span>
                     <% } %>
