--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -6,10 +6,10 @@
                 <%- partial("../_plugins/site-visitor") %>
             <% } %>
             <% if(config.symbols_count_time.total_symbols){ %>
-                &nbsp;<span class="site-count">
+                <span class="site-count">
                  <i class="iconfont icon-file-word %>"></i>
                     <a href="#"><%= symbolsCountTotal(site) %></a>
-                </span>&nbsp;
+                </span>
             <% } %>
             <% if(config.symbols_count_time.total_time){ %>
                 <span class="site-count">
