--- a/layout/_plugins/site-visitor.ejs
+++ b/layout/_plugins/site-visitor.ejs
@@ -3,7 +3,7 @@
 <span class="site-uv">
     <i class="iconfont icon-fangkeguanli %>"></i>
     <a class="busuanzi-value" id="busuanzi_value_site_uv"></a>
-</span>&nbsp;
+</span>
 <% } %>
 <% if (theme.visit_counter.site_pv) { %>
 <span class="site-pv">
