--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -43,3 +43,17 @@
     background-color: #444;
     color: #ccc;
 }
+
+// 字体大小
+body {
+    font-size: 14pt;
+    line-height: 1.8em;
+}
+
+.post-toc {
+    font-size: 0.9rem;
+}
+
+.copyright {
+    font-size: 16px;
+}
