update font size

--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -45,15 +45,15 @@
 }
 
 // 字体大小
-body {
-    font-size: 14pt;
-    line-height: 1.8em;
-}
+//body {
+//    font-size: 14pt;
+//    line-height: 1.8em;
+//}
 
-.post-toc {
-    font-size: 0.9rem;
-}
+//.post-toc {
+//    font-size: 0.9rem;
+//}
 
-.copyright {
-    font-size: 16px;
-}
+//.copyright {
+//    font-size: 16px;
+//}
