--- a/source/css/_page/_post/post_header.styl
+++ b/source/css/_page/_post/post_header.styl
@@ -3,8 +3,8 @@
   p
     font-size 1em
     margin 1em 0 1em 0
-//  .post-header h1
-//    margin 0 !important
+  .post-header h1
+    margin 0 !important
 
   .post-title
     font-size 2em
