update waline style

--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -19,7 +19,11 @@
 .wl-cards .wl-item {
     max-width: 780px;
     margin: auto;
-} 
+}
+.wl-card-item {
+    max-width: 780px;
+    margin: auto;
+}  
 .wl-power {
     max-width: 780px;
     margin: auto;
