--- a/layout/_plugins/waline.ejs
+++ b/layout/_plugins/waline.ejs
@@ -1,15 +1,18 @@
 <head>
   <!-- ... -->
-  <script src="https://unpkg.com/@waline/client@v2/dist/waline.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/@waline/client@v2/dist/waline.css" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/@waline/client@v2/dist/waline.css"
+  />
   <!-- ... -->
 </head>
-
 <body>
   <!-- ... -->
   <div id="waline"></div>
-  <script>
-    Waline.init({
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+
+    init({
       el: '#waline',
       serverURL: 'https://comments.wangzihang.site/',
       emoji: ['https://unpkg.com/@waline/emojis@1.1.0/weibo', 'https://unpkg.com/@waline/emojis@1.1.0/bilibili'],
